--- a/index.html
+++ b/index.html
@@ -22,46 +22,38 @@
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#home" class="nav-link">
-                        <i class="fas fa-home"></i>
-                        Home
+                        <i class="fas fa-home"></i> Home
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#explore" class="nav-link">
-                        <i class="fas fa-compass"></i>
-                        Explore
+                        <i class="fas fa-compass"></i> Explore
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#projects" class="nav-link">
-                        <i class="fas fa-layer-group"></i>
-                        Projects
+                        <i class="fas fa-layer-group"></i> Projects
                     </a>
                     <div class="dropdown">
                         <a href="#" class="dropdown-item">
-                            <i class="fas fa-palette"></i>
-                            Design Tools
+                            <i class="fas fa-palette"></i> Design Tools
                         </a>
                         <a href="#" class="dropdown-item">
-                            <i class="fas fa-code"></i>
-                            Development
+                            <i class="fas fa-code"></i> Development
                         </a>
                         <a href="#" class="dropdown-item">
-                            <i class="fas fa-chart-bar"></i>
-                            Analytics
+                            <i class="fas fa-chart-bar"></i> Analytics
                         </a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a href="#community" class="nav-link">
-                        <i class="fas fa-users"></i>
-                        Community
+                        <i class="fas fa-users"></i> Community
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#contact" class="nav-link">
-                        <i class="fas fa-envelope"></i>
-                        Contact
+                        <i class="fas fa-envelope"></i> Contact
                     </a>
                 </li>
             </ul>
@@ -90,24 +82,19 @@
         <!-- Mobile Menu -->
         <div class="mobile-menu">
             <a href="#home" class="mobile-nav-link">
-                <i class="fas fa-home"></i>
-                Home
+                <i class="fas fa-home"></i> Home
             </a>
             <a href="#explore" class="mobile-nav-link">
-                <i class="fas fa-compass"></i>
-                Explore
+                <i class="fas fa-compass"></i> Explore
             </a>
             <a href="#projects" class="mobile-nav-link">
-                <i class="fas fa-layer-group"></i>
-                Projects
+                <i class="fas fa-layer-group"></i> Projects
             </a>
             <a href="#community" class="mobile-nav-link">
-                <i class="fas fa-users"></i>
-                Community
+                <i class="fas fa-users"></i> Community
             </a>
             <a href="#contact" class="mobile-nav-link">
-                <i class="fas fa-envelope"></i>
-                Contact
+                <i class="fas fa-envelope"></i> Contact
             </a>
             <div class="mobile-actions">
                 <button class="btn btn-login">
@@ -123,15 +110,14 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero"id="home" >
+    <section class="hero" id="home">
         <div class="hero-container">
             <!-- Left Content -->
             <div class="hero-content">
-                <h1>Hello, I'm
-                    Alina</h1>
+                <h1>Hello, I'm Hakeem
+                </h1>
                 <p>
-                    A passionate Frontend Developer from Jaipur, India.
-                    I create fast, modern, and engaging web experiences with
+                    A passionate Frontend Developer from Jaipur, India. I create fast, modern, and engaging web experiences with
                     <strong>HTML, CSS, JavaScript & React</strong>.
                 </p>
                 <div class="hero-buttons">
@@ -150,7 +136,7 @@
 
 
     <!-- Explore Section -->
-    <section class="explore"id="explore" >
+    <section class="explore" id="explore">
         <div class="explore-container">
             <h2 class="explore-title">Explore My Portfolio</h2>
             <p class="explore-subtitle">
@@ -247,7 +233,7 @@
 
 
     <!-- Community Section -->
-    <section class="community"id="community" >
+    <section class="community" id="community">
         <div class="community-container">
             <h2 class="community-title">Join My Community</h2>
             <p class="community-subtitle">
@@ -292,7 +278,7 @@
 
 
     <!-- Contact Section -->
-    <section class="contact"id="contact" >
+    <section class="contact" id="contact">
         <div class="contact-container">
             <h2 class="contact-title">Let's Work Together</h2>
             <p class="contact-subtitle">
